--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,8 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+body{
+    background-image: linear-gradient(to right, #BBD2C5, #536976);
+    color: white;
+}
+
 
 .app{
     display: flex;
@@ -30,20 +32,21 @@ ul{
 }
 .productName{
     list-style: none;
-    padding: 10px;
+    padding: 20px;
     font-size: x-large;
     text-transform: uppercase;
+    text-align: left;
 }
 img{
     width: 300px;
-    height: 300px;
+    height: auto;
     border-radius: 20px;
+    box-shadow: 2px 2px 10px 10px rgb(139, 132, 132);
 }
 .productContainer{
     width: 500px;
-    background-color: aliceblue;
     text-align: center;
-    border: 2px solid rgb(167, 149, 149);
     border-radius: 10px;
     margin: 10px;
+    
 }
